# stagePLTR

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE-assets  README.md  channeltablemodel.h  devicecatalog.h  deviceitem.cpp  deviceitem.h  devicepalette.cpp  devicetype.h  documentinfo.cpp  documentinfo.h  documentinfodialog.cpp  documentinfodialog.h  inputlist.cpp  inputlist.h  main.cpp  mainwindow.cpp  mainwindow.h  pageconfig.h  pdfexporter.cpp  porteditor.cpp  porteditor.h  ports.h  preferencesdialog.cpp  preferencesdialog.h  resources.qrc  stagescene.cpp  stagescene.h  stageview.h
assets/: README.md
assets/app-icon/: README.md  icons.toml
assets/plot/: catalog.json
figures/: ASSETS.md  PIPELINE.md  README.md  generate.py  manifest.json  requirements.txt  spec.md  test_generate.py
figures/.blendsrc/: .gitkeep
figures/blender-flow/: REQUIREMENTS.md  WORKFLOW.md  stage-template.blend  stagegen.py
src/app/: mainwindow.cpp  mainwindow.h  undocommands.cpp  undocommands.h
src/canvas/: deviceitem.cpp  deviceitem.h  stagescene.cpp  stagescene.h  stageview.cpp
src/export/: pdfexporter.cpp  pdfexporter.h
src/model/: channel.h  devicecatalog.cpp  devicecatalog.h  deviceicon.cpp  deviceicon.h  devicetype.h  inputlist.cpp  pageconfig.cpp  ports.cpp  ports.h
src/panels/: channeltablemodel.cpp  channeltablemodel.h  devicelist.cpp  devicelist.h  devicepalette.cpp  devicepalette.h  objecteditordialog.cpp  objecteditordialog.h  porteditor.cpp  porteditor.h
tests/: CMakeLists.txt  test_devicecatalog.cpp  test_deviceicon.cpp  test_documentinfo.cpp  test_inputlist.cpp  test_pageconfig.cpp  test_ports.cpp  test_stagescene.cpp  test_undo.cpp
